// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LineWidgetComponent Rendering should render correctly with {"properties":{"lineStyle":"dashed","color":"black","thickness":5,"start":{"x":30,"y":20},"end":{"x":180,"y":190}},"isSelected":true} while selected 1`] = `
<div>
  <div
    class="fit-full"
  >
    <div
      class="line-anchor"
      data-testid="line-start-anchor"
      draggable="true"
      id="line-symbol-widget"
      style="position: absolute; left: 20px; top: 10px;"
    />
    <svg
      pointer-events="none"
      style="width: 100%; height: 100%;"
    >
      <line
        stroke="black"
        stroke-dasharray="10,5"
        stroke-width="5"
        x1="30"
        x2="180"
        y1="20"
        y2="190"
      />
    </svg>
    <div
      class="line-anchor"
      data-testid="line-end-anchor"
      draggable="true"
      id="line-symbol-widget"
      style="position: absolute; left: 170px; top: 180px;"
    />
  </div>
</div>
`;

exports[`LineWidgetComponent Rendering should render correctly with {"properties":{"lineStyle":"dashed","color":"blue","thickness":10,"start":{"x":180,"y":175},"end":{"x":20,"y":30}},"isSelected":true} while selected 1`] = `
<div>
  <div
    class="fit-full"
  >
    <div
      class="line-anchor"
      data-testid="line-start-anchor"
      draggable="true"
      id="line-symbol-widget"
      style="position: absolute; left: 170px; top: 165px;"
    />
    <svg
      pointer-events="none"
      style="width: 100%; height: 100%;"
    >
      <line
        stroke="blue"
        stroke-dasharray="10,5"
        stroke-width="10"
        x1="180"
        x2="20"
        y1="175"
        y2="30"
      />
    </svg>
    <div
      class="line-anchor"
      data-testid="line-end-anchor"
      draggable="true"
      id="line-symbol-widget"
      style="position: absolute; left: 10px; top: 20px;"
    />
  </div>
</div>
`;

exports[`LineWidgetComponent Rendering should render correctly with {"properties":{"lineStyle":"dotted","color":"black","thickness":5,"start":{"x":25,"y":5},"end":{"x":100,"y":120}},"isSelected":true} while selected 1`] = `
<div>
  <div
    class="fit-full"
  >
    <div
      class="line-anchor"
      data-testid="line-start-anchor"
      draggable="true"
      id="line-symbol-widget"
      style="position: absolute; left: 15px; top: -5px;"
    />
    <svg
      pointer-events="none"
      style="width: 100%; height: 100%;"
    >
      <line
        stroke="black"
        stroke-dasharray="3,3"
        stroke-width="5"
        x1="25"
        x2="100"
        y1="5"
        y2="120"
      />
    </svg>
    <div
      class="line-anchor"
      data-testid="line-end-anchor"
      draggable="true"
      id="line-symbol-widget"
      style="position: absolute; left: 90px; top: 110px;"
    />
  </div>
</div>
`;

exports[`LineWidgetComponent Rendering should render correctly with {"properties":{"lineStyle":"dotted","color":"green","thickness":15,"start":{"x":180,"y":175},"end":{"x":20,"y":30}},"isSelected":true} while selected 1`] = `
<div>
  <div
    class="fit-full"
  >
    <div
      class="line-anchor"
      data-testid="line-start-anchor"
      draggable="true"
      id="line-symbol-widget"
      style="position: absolute; left: 170px; top: 165px;"
    />
    <svg
      pointer-events="none"
      style="width: 100%; height: 100%;"
    >
      <line
        stroke="green"
        stroke-dasharray="3,3"
        stroke-width="15"
        x1="180"
        x2="20"
        y1="175"
        y2="30"
      />
    </svg>
    <div
      class="line-anchor"
      data-testid="line-end-anchor"
      draggable="true"
      id="line-symbol-widget"
      style="position: absolute; left: 10px; top: 20px;"
    />
  </div>
</div>
`;

exports[`LineWidgetComponent Rendering should render correctly with {"properties":{"lineStyle":"solid","color":"black","thickness":5,"start":{"x":20,"y":20},"end":{"x":180,"y":180}},"isSelected":true} while selected 1`] = `
<div>
  <div
    class="fit-full"
  >
    <div
      class="line-anchor"
      data-testid="line-start-anchor"
      draggable="true"
      id="line-symbol-widget"
      style="position: absolute; left: 10px; top: 10px;"
    />
    <svg
      pointer-events="none"
      style="width: 100%; height: 100%;"
    >
      <line
        stroke="black"
        stroke-dasharray="1,0"
        stroke-width="5"
        x1="20"
        x2="180"
        y1="20"
        y2="180"
      />
    </svg>
    <div
      class="line-anchor"
      data-testid="line-end-anchor"
      draggable="true"
      id="line-symbol-widget"
      style="position: absolute; left: 170px; top: 170px;"
    />
  </div>
</div>
`;

exports[`LineWidgetComponent Rendering should render correctly with {"properties":{"lineStyle":"solid","color":"red","thickness":5,"start":{"x":20,"y":20},"end":{"x":180,"y":180}},"isSelected":true} while selected 1`] = `
<div>
  <div
    class="fit-full"
  >
    <div
      class="line-anchor"
      data-testid="line-start-anchor"
      draggable="true"
      id="line-symbol-widget"
      style="position: absolute; left: 10px; top: 10px;"
    />
    <svg
      pointer-events="none"
      style="width: 100%; height: 100%;"
    >
      <line
        stroke="red"
        stroke-dasharray="1,0"
        stroke-width="5"
        x1="20"
        x2="180"
        y1="20"
        y2="180"
      />
    </svg>
    <div
      class="line-anchor"
      data-testid="line-end-anchor"
      draggable="true"
      id="line-symbol-widget"
      style="position: absolute; left: 170px; top: 170px;"
    />
  </div>
</div>
`;
